Bug:  PRD Reviewer:  Self Comments:  Changes for Neutron integration.  {191st} 1. Adjusted the manage comments dialog for IE. 2. Adjusted the default widths of the select and comment columns. 3. In Filr, don't wordwrap file or folder names. 4. In the 'Shared By/With' me views: a. In Filr, set the default pixel widths as per Lynn's recommendation. b. In Vibe, adjust the default percentage widths for the select and    comment changes.
Files:
M    gwt/src/org/kablink/teaming/gwt/client/datatable/CommentsCell.java
M    gwt/src/org/kablink/teaming/gwt/client/datatable/EntryTitleCell.java
M    gwt/src/org/kablink/teaming/gwt/client/datatable/ManageCommentsDlg.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/CollectionView.java
M    gwt/src/org/kablink/teaming/gwt/client/binderviews/DataTableFolderViewBase.java
M    gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtBinderViews.css
@@ -154,7 +154,8 @@
 		.vibe-dataTableAssignment-labelIE         {vertical-align: -5px;}
 		.vibe-dataTableAssignment-list            {}
 		.vibe-dataTableAssignment-panel           {white-space: nowrap;}
-		.vibe-dataTableComments-panel             {background: url(images/comments_25.png) no-repeat scroll center center transparent; color: #135c8f; font-size: 12px; font-weight: bold; padding-top: 4px; padding-bottom: 5px; padding-left: 8px; padding-right: 8px; text-align: center; display: inline;}
+		.vibe-dataTableComments-bubble            {background: url(images/comments_25.png) no-repeat scroll center center transparent; color: #135c8f; font-size: 12px; font-weight: bold; padding-top: 4px; padding-bottom: 5px; padding-left: 8px; padding-right: 8px; text-align: center; display: inline;}
+		.vibe-dataTableComments-panel             {text-align: center; display: block;}
 		.vibe-dataTableComments-panel0            {opacity: 0.4; filter: alpha(opacity=40);}
 		.vibe-dataTableCustom-anchor              {}
 		.vibe-dataTableCustom-anchor-label        {}
@@ -173,6 +174,7 @@
 		.vibe-dataTableEntry-download             {border: 0px solid #666666; padding-left: 0px; padding-right: 0px; line-height: 11px;}
 		.vibe-dataTableEntry-title                {cursor: pointer; color: #135c8f !important; padding: 2px;}
 		.vibe-dataTableEntry-titleNoLink          {color: #353838 !important; padding: 2px;}
+		.vibe-dataTableEntry-titlePanel           {}
 		.vibe-dataTableEntry-unseenMarker         {display: inline; cursor: pointer;}
 		.vibe-dataTableEntry-viewAnchor           {text-decoration: none;}
 		.vibe-dataTableEntry-viewLabel            {}
@@ -368,22 +370,26 @@
 /* Start:  Add files via HTML5 styles. */
 
 /* Start:  Manage comments dialog styles. */
-	.vibe-manageCommentsDlg .popupContent       {background-color: white !important;}
-	.vibe-manageCommentsDlg-addCommentAvatar    {vertical-align: top !important; padding: 5px 10px; width: 30px; height: 30px; border-radius: 2px;}
-	.vibe-manageCommentsDlg-addCommentHint      {color: #4D6D8B; font-size: 1em;}
-	.vibe-manageCommentsDlg-addCommentHintPanel {padding-top: 5px; padding-right: 5px;}
-	.vibe-manageCommentsDlg-addCommentPanel     {color: #353838; background-color: #F6F6F6; border-top-color: #cccccc; border-top-style: solid; border-top-width: 1px; width: 100%; padding-top: 15px; padding-bottom: 15px; box-shadow: 0px 2px 3px #e0e0e0 inset;}
-	.vibe-manageCommentsDlg-addCommentTextArea  {background-color: white; font-family: Arial, Helvetica, sans-serif; font-size: 14px; width: 500px; height: 45px; padding: 5px; border: 1px solid #E0E0E0; -moz-border-radius: 3px; border-radius: 3px; -webkit-border-radius: 3px;}
-	.vibe-manageCommentsDlg-captionImg          {width: 36px; height: 36px;}
-	.vibe-manageCommentsDlg-commentsWidget      {height: 300px; overflow: auto; width: 550px;}
-	.vibe-manageCommentsDlg-label               {}
-	.vibe-manageCommentsDlg-panel               {}
-	.vibe-manageCommentsDlg-sendButton          {
+	.vibe-manageCommentsDlg .popupContent          {background-color: white !important;}
+	.vibe-manageCommentsDlg-addCommentAvatar       {vertical-align: top !important; padding: 5px 10px; width: 30px; height: 30px; border-radius: 2px;}
+	.vibe-manageCommentsDlg-addCommentHint         {color: #4D6D8B; font-size: 1em;}
+	.vibe-manageCommentsDlg-addCommentHintPanel    {padding-top: 5px; padding-right: 5px;}
+	.vibe-manageCommentsDlg-addCommentPanel        {color: #353838; background-color: #F6F6F6; border-top-color: #cccccc; border-top-style: solid; border-top-width: 1px; padding-top: 15px; padding-bottom: 15px; box-shadow: 0px 2px 3px #e0e0e0 inset;}
+	.vibe-manageCommentsDlg-addCommentPanel-nonIE  {width: 100%; }
+	.vibe-manageCommentsDlg-addCommentTextArea     {background-color: white; font-family: Arial, Helvetica, sans-serif; font-size: 14px; width: 500px; height: 45px; padding: 5px; border: 1px solid #E0E0E0; -moz-border-radius: 3px; border-radius: 3px; -webkit-border-radius: 3px;}
+	.vibe-manageCommentsDlg-captionImg             {width: 36px; height: 36px;}
+	.vibe-manageCommentsDlg-commentsWidget         {height: 300px; overflow: auto; width: 550px;}
+	.vibe-manageCommentsDlg-label                  {}
+	.vibe-manageCommentsDlg-panel                  {}
+	.vibe-manageCommentsDlg-sendButton-nonIE       {float:right;}
+	.vibe-manageCommentsDlg-sendButton-nonIE:hover {float:right;}
+	.vibe-manageCommentsDlg-sendButton-IE          {margin-left: 20px;}
+	.vibe-manageCommentsDlg-sendButton-IE:hover    {margin-left: 20px;}
+	.vibe-manageCommentsDlg-sendButton             {
 		color:#fff;
 	 	font-size: 14px !important;
 	    font-family: Arial, sans-serif !important;
 	    text-align: center !important;
-	 	float: right;
 	  	white-space: nowrap !important;
 		border: 0px;
 	  	background: #949494 none repeat scroll 0 0;
@@ -398,7 +404,6 @@
 	.vibe-manageCommentsDlg-sendButton:hover {
 		color: #135c8f !important;
 		font-size: 14px !important;
-		float: right;
 	    white-space: nowrap !important;
 	    text-decoration: none !important;
 		border: 0px;
